Closes #41